tests/snapshots/run_wpt_conformance__trtx_sub_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float32 1D constant tensors",
    "trtx",
    "PASS",
)
