tests/snapshots/run_wpt_conformance__trtx_sub_float32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float32 4D tensors",
    "trtx",
    "PASS",
)
